Fix gap under image

--- a/src/components/StudyImage/StudyImage.css
+++ b/src/components/StudyImage/StudyImage.css
@@ -7,6 +7,7 @@
   max-width: 683px;
   position: relative;
   left: -20px;
+  display: block;
 }
 
 .StudyImage.fyi img {
@@ -18,6 +19,7 @@
   text-align: center;
   line-height: 1;
   font-size: 12px;
+  margin-top: 12px;
   margin-bottom: 12px;
 }
 
